重构角色技能系统，优化其注册方式。